# ave_technologies_test_task

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: application.py  config.py  containers.py  exceptions.py  logger.py
app/api/: router.py
app/api/v1/: address.py
app/data_classes/: address.py  http.py
app/services/clients/: redis.py
test/: .env.test  conftest.py
test/e2e/: test_address.py
