[project]
name = "ave-technologies-test-task"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.48.3",
    "fastapi>=0.124.2",
    "loguru>=0.7.3",
    "pydantic-extra-types[phonenumbers]>=2.10.6",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.32.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
]
